problema con el formateo automático

--- a/Template/about-us.html
+++ b/Template/about-us.html
@@ -11,29 +11,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/material.min.css">
-    <link rel="stylesheet" href="assets/css/ripples.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/settings.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/material.min.css">
+    <link rel="stylesheet" href="/assets/css/ripples.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/css/settings.css">
+    <link rel="stylesheet" href="/assets/css/slicknav.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
-    <link rel="stylesheet" href="assets/css/switcher.css">
+    <link rel="stylesheet" href="/assets/css/switcher.css">
 
-    <link rel="stylesheet" href="assets/css/colors/pink.css">
-    <link rel="stylesheet" href="assets/css/colors/purple.css">
-    <link rel="stylesheet" href="assets/css/colors/deep-purple.css">
-    <link rel="stylesheet" href="assets/css/colors/indigo.css">
-    <link rel="stylesheet" href="assets/css/colors/blue.css">
-    <link rel="stylesheet" href="assets/css/colors/yellow.css">
-    <link rel="stylesheet" href="assets/css/colors/green.css">
-    <link rel="stylesheet" href="assets/css/colors/red.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/colors/pink.css">
+    <link rel="stylesheet" href="/assets/css/colors/purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/deep-purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/indigo.css">
+    <link rel="stylesheet" href="/assets/css/colors/blue.css">
+    <link rel="stylesheet" href="/assets/css/colors/yellow.css">
+    <link rel="stylesheet" href="/assets/css/colors/green.css">
+    <link rel="stylesheet" href="/assets/css/colors/red.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                     <li class=" dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Home</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="index.html">Home Page 1</a>
+                            <a class="sub-menu-item" href="index.html">Home Page 1</a>
                             <a class="sub-menu-item" href="index-2.html">Home Page 2</a>
                         </div>
                     </li>
@@ -331,7 +331,7 @@ Contact Us
 
                     <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix business blog">
                         <figure class="single-portfolio">
-                            <img class="img-responsive" src="assets/images/portfolio/work1.jpg" alt="">
+                            <img class="img-responsive" src="/assets/images/portfolio/work1.jpg" alt="">
                             <figcaption class="hover-content">
                                 <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
                                 <a href="portfolio-single.html">
@@ -344,7 +344,7 @@ Contact Us
 
                     <div class="col-md-3  col-sm-6 col-xs-12 no-padding mix education more">
                         <figure class="single-portfolio">
-                            <img class="img-responsive" src="assets/images/portfolio/work2.jpg" alt="">
+                            <img class="img-responsive" src="/assets/images/portfolio/work2.jpg" alt="">
                             <figcaption class="hover-content">
                                 <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
                                 <a href="portfolio-single.html">
@@ -357,7 +357,7 @@ Contact Us
 
                     <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix free education">
                         <figure class="single-portfolio">
-                            <img class="img-responsive" src="assets/images/portfolio/work3.jpg" alt="">
+                            <img class="img-responsive" src="/assets/images/portfolio/work3.jpg" alt="">
                             <figcaption class="hover-content">
                                 <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
                                 <a href="portfolio-single.html">
@@ -370,7 +370,7 @@ Contact Us
 
                     <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix creative more business">
                         <figure class="single-portfolio">
-                            <img class="img-responsive" src="assets/images/portfolio/work4.jpg" alt="">
+                            <img class="img-responsive" src="/assets/images/portfolio/work4.jpg" alt="">
                             <figcaption class="hover-content">
                                 <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
                                 <a href="portfolio-single.html">
@@ -383,7 +383,7 @@ Contact Us
 
                     <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix more free creative">
                         <figure class="single-portfolio">
-                            <img class="img-responsive" src="assets/images/portfolio/work5.jpg" alt="">
+                            <img class="img-responsive" src="/assets/images/portfolio/work5.jpg" alt="">
                             <figcaption class="hover-content">
                                 <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
                                 <a href="portfolio-single.html">
@@ -396,7 +396,7 @@ Contact Us
 
                     <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix blog">
                         <figure class="single-portfolio">
-                            <img class="img-responsive" src="assets/images/portfolio/work6.jpg" alt="">
+                            <img class="img-responsive" src="/assets/images/portfolio/work6.jpg" alt="">
                             <figcaption class="hover-content">
                                 <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
                                 <a href="portfolio-single.html">
@@ -409,7 +409,7 @@ Contact Us
 
                     <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix business blog education more">
                         <figure class="single-portfolio">
-                            <img class="img-responsive" src="assets/images/portfolio/work7.jpg" alt="">
+                            <img class="img-responsive" src="/assets/images/portfolio/work7.jpg" alt="">
                             <figcaption class="hover-content">
                                 <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
                                 <a href="portfolio-single.html">
@@ -422,7 +422,7 @@ Contact Us
 
                     <div class="col-md-3 col-sm-6 col-xs-12 no-padding mix more">
                         <figure class="single-portfolio">
-                            <img class="img-responsive" src="assets/images/portfolio/work8.jpg" alt="">
+                            <img class="img-responsive" src="/assets/images/portfolio/work8.jpg" alt="">
                             <figcaption class="hover-content">
                                 <a class="btn btn-round btn-fab btn-xs" href="portfolio-single.html"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
                                 <a href="portfolio-single.html">
@@ -462,7 +462,7 @@ Contact Us
 
                 <div class="col-md-3 wow animated fadeInUp" data-wow-delay=".3s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team1.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team1.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -481,7 +481,7 @@ Contact Us
 
                 <div class="col-md-3 wow animated fadeInUp" data-wow-delay=".4s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team2.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team2.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -500,7 +500,7 @@ Contact Us
 
                 <div class="col-md-3 wow animated fadeInUp" data-wow-delay=".5s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team3.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team3.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -519,7 +519,7 @@ Contact Us
 
                 <div class="col-md-3 wow animated fadeInUp" data-wow-delay=".6s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team4.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team4.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -584,7 +584,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work1.png" alt="">
+                                            <img src="/assets/images/work/footer-work1.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -599,7 +599,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work2.png" alt="">
+                                            <img src="/assets/images/work/footer-work2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -678,7 +678,7 @@ Contact Us
 
     <div id="loader">
         <div class="square-spin">
-            <img src="assets/images/Preloader.gif" alt="MEA Proloader">
+            <img src="/assets/images/Preloader.gif" alt="MEA Proloader">
         </div>
     </div>
 
@@ -719,23 +719,23 @@ Contact Us
 
 
 
-    <script data-cfasync="false" src="assets/js/email-decode.min.js"></script>
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/switcher.js"></script>
-    <script src="assets/js/jquery.mixitup.min.js"></script>
-    <script src="assets/js/jquery.inview.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/scroll-top.js"></script>
-    <script src="assets/js/material.min.js"></script>
-    <script src="assets/js/ripples.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script data-cfasync="false" src="/assets/js/email-decode.min.js"></script>
+    <script src="/assets/js/jquery-min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/switcher.js"></script>
+    <script src="/assets/js/jquery.mixitup.min.js"></script>
+    <script src="/assets/js/jquery.inview.js"></script>
+    <script src="/assets/js/jquery.counterup.min.js"></script>
+    <script src="/assets/js/scroll-top.js"></script>
+    <script src="/assets/js/material.min.js"></script>
+    <script src="/assets/js/ripples.min.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
 
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/form-validator.min.js"></script>
+    <script src="/assets/js/contact-form-script.min.js"></script>
+    <script src="/assets/js/wow.js"></script>
+    <script src="/assets/js/jquery.slicknav.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
