--- a/Template/about-us2.html
+++ b/Template/about-us2.html
@@ -11,29 +11,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/material.min.css">
-    <link rel="stylesheet" href="assets/css/ripples.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/settings.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/material.min.css">
+    <link rel="stylesheet" href="/assets/css/ripples.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/css/settings.css">
+    <link rel="stylesheet" href="/assets/css/slicknav.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
-    <link rel="stylesheet" href="assets/css/switcher.css">
+    <link rel="stylesheet" href="/assets/css/switcher.css">
 
-    <link rel="stylesheet" href="assets/css/colors/pink.css">
-    <link rel="stylesheet" href="assets/css/colors/purple.css">
-    <link rel="stylesheet" href="assets/css/colors/deep-purple.css">
-    <link rel="stylesheet" href="assets/css/colors/indigo.css">
-    <link rel="stylesheet" href="assets/css/colors/blue.css">
-    <link rel="stylesheet" href="assets/css/colors/yellow.css">
-    <link rel="stylesheet" href="assets/css/colors/green.css">
-    <link rel="stylesheet" href="assets/css/colors/red.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/colors/pink.css">
+    <link rel="stylesheet" href="/assets/css/colors/purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/deep-purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/indigo.css">
+    <link rel="stylesheet" href="/assets/css/colors/blue.css">
+    <link rel="stylesheet" href="/assets/css/colors/yellow.css">
+    <link rel="stylesheet" href="/assets/css/colors/green.css">
+    <link rel="stylesheet" href="/assets/css/colors/red.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                     <li class=" dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Home</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="index.html">Home Page 1</a>
+                            <a class="sub-menu-item" href="index.html">Home Page 1</a>
                             <a class="sub-menu-item" href="index-2.html">Home Page 2</a>
                         </div>
                     </li>
@@ -307,7 +307,7 @@ Contact Us
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="assets/images/team/team1.png" class="img-responsive" alt="">
+                                <img src="/assets/images/team/team1.png" class="img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -328,7 +328,7 @@ Contact Us
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="assets/images/team/team2.png" class="img-responsive" alt="">
+                                <img src="/assets/images/team/team2.png" class="img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -349,7 +349,7 @@ Contact Us
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="assets/images/team/team3.png" class="img-responsive" alt="">
+                                <img src="/assets/images/team/team3.png" class="img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -370,7 +370,7 @@ Contact Us
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="assets/images/team/team4.png" class="img-responsive" alt="">
+                                <img src="/assets/images/team/team4.png" class="img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -391,7 +391,7 @@ Contact Us
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="assets/images/team/team1.png" class="img-responsive" alt="">
+                                <img src="/assets/images/team/team1.png" class="img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -412,7 +412,7 @@ Contact Us
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="assets/images/team/team2.png" class="img-responsive" alt="">
+                                <img src="/assets/images/team/team2.png" class="img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -433,7 +433,7 @@ Contact Us
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="assets/images/team/team3.png" class="img-responsive" alt="">
+                                <img src="/assets/images/team/team3.png" class="img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -454,7 +454,7 @@ Contact Us
 
                         <div class="">
                             <div class="single-team-widget">
-                                <img src="assets/images/team/team4.png" class="img-responsive" alt="">
+                                <img src="/assets/images/team/team4.png" class="img-responsive" alt="">
                                 <div class="team-member-info">
                                     <div class="know-more">
                                         <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -505,7 +505,7 @@ Contact Us
                     <div class="tab-content clearfix">
                         <div role="tabpanel" class="tab-pane fade in active" id="home">
                             <div class="col-md-4 no-padding">
-                                <img src="assets/images/portfolio/work1.jpg" alt="">
+                                <img src="/assets/images/portfolio/work1.jpg" alt="">
                             </div>
                             <div class="col-md-8">
                                 <h2 class="subtitle">Perferendis et, veritatis enim voluptatem libero.</h2>
@@ -519,7 +519,7 @@ Contact Us
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="profile">
                             <div class="col-md-4 no-padding">
-                                <img src="assets/images/portfolio/work2.jpg" alt="">
+                                <img src="/assets/images/portfolio/work2.jpg" alt="">
                             </div>
                             <div class="col-md-8">
                                 <h2 class="subtitle">Delectus, aut ut totam quam inventore suscipit.</h2>
@@ -533,7 +533,7 @@ Contact Us
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="messages">
                             <div class="col-md-4 no-padding">
-                                <img src="assets/images/portfolio/work3.jpg" alt="">
+                                <img src="/assets/images/portfolio/work3.jpg" alt="">
                             </div>
                             <div class="col-md-8">
                                 <h2 class="subtitle">voluptatum itaque at. Expedita impedit facere.</h2>
@@ -547,7 +547,7 @@ Contact Us
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="settings">
                             <div class="col-md-4 no-padding">
-                                <img src="assets/images/portfolio/work4.jpg" alt="">
+                                <img src="/assets/images/portfolio/work4.jpg" alt="">
                             </div>
                             <div class="col-md-8">
                                 <h2 class="subtitle">Lorem ipsum dolor sit amet, consectetur adi.</h2>
@@ -610,7 +610,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work1.png" alt="">
+                                            <img src="/assets/images/work/footer-work1.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -625,7 +625,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work2.png" alt="">
+                                            <img src="/assets/images/work/footer-work2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -704,7 +704,7 @@ Contact Us
 
     <div id="loader">
         <div class="square-spin">
-            <img src="assets/images/Preloader.gif" alt="MEA Proloader">
+            <img src="/assets/images/Preloader.gif" alt="MEA Proloader">
         </div>
     </div>
 
@@ -745,23 +745,23 @@ Contact Us
 
 
 
-    <script data-cfasync="false" src="assets/js/email-decode.min.js"></script>
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/switcher.js"></script>
-    <script src="assets/js/jquery.mixitup.min.js"></script>
-    <script src="assets/js/jquery.inview.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/scroll-top.js"></script>
-    <script src="assets/js/material.min.js"></script>
-    <script src="assets/js/ripples.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script data-cfasync="false" src="/assets/js/email-decode.min.js"></script>
+    <script src="/assets/js/jquery-min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/switcher.js"></script>
+    <script src="/assets/js/jquery.mixitup.min.js"></script>
+    <script src="/assets/js/jquery.inview.js"></script>
+    <script src="/assets/js/jquery.counterup.min.js"></script>
+    <script src="/assets/js/scroll-top.js"></script>
+    <script src="/assets/js/material.min.js"></script>
+    <script src="/assets/js/ripples.min.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
 
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/form-validator.min.js"></script>
+    <script src="/assets/js/contact-form-script.min.js"></script>
+    <script src="/assets/js/wow.js"></script>
+    <script src="/assets/js/jquery.slicknav.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
