--- a/Template/buttons.html
+++ b/Template/buttons.html
@@ -11,29 +11,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/material.min.css">
-    <link rel="stylesheet" href="assets/css/ripples.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/settings.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/material.min.css">
+    <link rel="stylesheet" href="/assets/css/ripples.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/css/settings.css">
+    <link rel="stylesheet" href="/assets/css/slicknav.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
-    <link rel="stylesheet" href="assets/css/switcher.css">
+    <link rel="stylesheet" href="/assets/css/switcher.css">
 
-    <link rel="stylesheet" href="assets/css/colors/pink.css">
-    <link rel="stylesheet" href="assets/css/colors/purple.css">
-    <link rel="stylesheet" href="assets/css/colors/deep-purple.css">
-    <link rel="stylesheet" href="assets/css/colors/indigo.css">
-    <link rel="stylesheet" href="assets/css/colors/blue.css">
-    <link rel="stylesheet" href="assets/css/colors/yellow.css">
-    <link rel="stylesheet" href="assets/css/colors/green.css">
-    <link rel="stylesheet" href="assets/css/colors/red.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/colors/pink.css">
+    <link rel="stylesheet" href="/assets/css/colors/purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/deep-purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/indigo.css">
+    <link rel="stylesheet" href="/assets/css/colors/blue.css">
+    <link rel="stylesheet" href="/assets/css/colors/yellow.css">
+    <link rel="stylesheet" href="/assets/css/colors/green.css">
+    <link rel="stylesheet" href="/assets/css/colors/red.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                     <li class=" dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Home</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="index.html">Home Page 1</a>
+                            <a class="sub-menu-item" href="index.html">Home Page 1</a>
                             <a class="sub-menu-item" href="index-2.html">Home Page 2</a>
                         </div>
                     </li>
@@ -310,7 +310,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work1.png" alt="">
+                                            <img src="/assets/images/work/footer-work1.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -325,7 +325,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work2.png" alt="">
+                                            <img src="/assets/images/work/footer-work2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -404,7 +404,7 @@ Contact Us
 
     <div id="loader">
         <div class="square-spin">
-            <img src="assets/images/Preloader.gif" alt="MEA Proloader">
+            <img src="/assets/images/Preloader.gif" alt="MEA Proloader">
         </div>
     </div>
 
@@ -445,23 +445,23 @@ Contact Us
 
 
 
-    <script data-cfasync="false" src="assets/js/email-decode.min.js"></script>
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/switcher.js"></script>
-    <script src="assets/js/jquery.mixitup.min.js"></script>
-    <script src="assets/js/jquery.inview.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/scroll-top.js"></script>
-    <script src="assets/js/material.min.js"></script>
-    <script src="assets/js/ripples.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script data-cfasync="false" src="/assets/js/email-decode.min.js"></script>
+    <script src="/assets/js/jquery-min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/switcher.js"></script>
+    <script src="/assets/js/jquery.mixitup.min.js"></script>
+    <script src="/assets/js/jquery.inview.js"></script>
+    <script src="/assets/js/jquery.counterup.min.js"></script>
+    <script src="/assets/js/scroll-top.js"></script>
+    <script src="/assets/js/material.min.js"></script>
+    <script src="/assets/js/ripples.min.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
 
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/form-validator.min.js"></script>
+    <script src="/assets/js/contact-form-script.min.js"></script>
+    <script src="/assets/js/wow.js"></script>
+    <script src="/assets/js/jquery.slicknav.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
