--- a/Template/team.html
+++ b/Template/team.html
@@ -11,29 +11,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/material.min.css">
-    <link rel="stylesheet" href="assets/css/ripples.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/settings.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/material.min.css">
+    <link rel="stylesheet" href="/assets/css/ripples.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/css/settings.css">
+    <link rel="stylesheet" href="/assets/css/slicknav.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
-    <link rel="stylesheet" href="assets/css/switcher.css">
+    <link rel="stylesheet" href="/assets/css/switcher.css">
 
-    <link rel="stylesheet" href="assets/css/colors/pink.css">
-    <link rel="stylesheet" href="assets/css/colors/purple.css">
-    <link rel="stylesheet" href="assets/css/colors/deep-purple.css">
-    <link rel="stylesheet" href="assets/css/colors/indigo.css">
-    <link rel="stylesheet" href="assets/css/colors/blue.css">
-    <link rel="stylesheet" href="assets/css/colors/yellow.css">
-    <link rel="stylesheet" href="assets/css/colors/green.css">
-    <link rel="stylesheet" href="assets/css/colors/red.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/colors/pink.css">
+    <link rel="stylesheet" href="/assets/css/colors/purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/deep-purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/indigo.css">
+    <link rel="stylesheet" href="/assets/css/colors/blue.css">
+    <link rel="stylesheet" href="/assets/css/colors/yellow.css">
+    <link rel="stylesheet" href="/assets/css/colors/green.css">
+    <link rel="stylesheet" href="/assets/css/colors/red.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,14 +48,14 @@
                     <li class=" dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Home</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="index.html">Home Page 1</a>
+                            <a class="sub-menu-item" href="index.html">Home Page 1</a>
                             <a class="sub-menu-item" href="index-2.html">Home Page 2</a>
                         </div>
                     </li>
                     <li class="dropdown sub-menu active">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Pages</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="about-us.html">About Us 1</a>
+                            <a class="sub-menu-item" href="about-us.html">About Us 1</a>
                             <a class="sub-menu-item" href="about-us2.html">About Us 2</a>
                             <a class="sub-menu-item active" href="team.html">Team Members</a>
                             <a class="sub-menu-item" href="services.html">Services</a>
@@ -249,7 +249,7 @@ Contact Us
 
                 <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".1s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team1.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team1.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -268,7 +268,7 @@ Contact Us
 
                 <div class="col-md-3  wow fadeInUp animated" data-wow-delay=".2s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team2.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team2.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -287,7 +287,7 @@ Contact Us
 
                 <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".3s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team3.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team3.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -306,7 +306,7 @@ Contact Us
 
                 <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".4s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team4.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team4.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -325,7 +325,7 @@ Contact Us
 
                 <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".5s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team1.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team1.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -344,7 +344,7 @@ Contact Us
 
                 <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".6s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team2.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team2.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -363,7 +363,7 @@ Contact Us
 
                 <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".7s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team3.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team3.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -382,7 +382,7 @@ Contact Us
 
                 <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".8s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team4.png" class="img-responsive center-block" alt="">
+                        <img src="/assets/images/team/team4.png" class="img-responsive center-block" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -447,7 +447,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work1.png" alt="">
+                                            <img src="/assets/images/work/footer-work1.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -462,7 +462,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work2.png" alt="">
+                                            <img src="/assets/images/work/footer-work2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -541,7 +541,7 @@ Contact Us
 
     <div id="loader">
         <div class="square-spin">
-            <img src="assets/images/Preloader.gif" alt="MEA Proloader">
+            <img src="/assets/images/Preloader.gif" alt="MEA Proloader">
         </div>
     </div>
 
@@ -582,23 +582,23 @@ Contact Us
 
 
 
-    <script data-cfasync="false" src="assets/js/email-decode.min.js"></script>
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/switcher.js"></script>
-    <script src="assets/js/jquery.mixitup.min.js"></script>
-    <script src="assets/js/jquery.inview.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/scroll-top.js"></script>
-    <script src="assets/js/material.min.js"></script>
-    <script src="assets/js/ripples.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script data-cfasync="false" src="/assets/js/email-decode.min.js"></script>
+    <script src="/assets/js/jquery-min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/switcher.js"></script>
+    <script src="/assets/js/jquery.mixitup.min.js"></script>
+    <script src="/assets/js/jquery.inview.js"></script>
+    <script src="/assets/js/jquery.counterup.min.js"></script>
+    <script src="/assets/js/scroll-top.js"></script>
+    <script src="/assets/js/material.min.js"></script>
+    <script src="/assets/js/ripples.min.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
 
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/form-validator.min.js"></script>
+    <script src="/assets/js/contact-form-script.min.js"></script>
+    <script src="/assets/js/wow.js"></script>
+    <script src="/assets/js/jquery.slicknav.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
