--- a/Template/blog-single.html
+++ b/Template/blog-single.html
@@ -11,29 +11,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/material.min.css">
-    <link rel="stylesheet" href="assets/css/ripples.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/settings.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/material.min.css">
+    <link rel="stylesheet" href="/assets/css/ripples.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/css/settings.css">
+    <link rel="stylesheet" href="/assets/css/slicknav.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
-    <link rel="stylesheet" href="assets/css/switcher.css">
+    <link rel="stylesheet" href="/assets/css/switcher.css">
 
-    <link rel="stylesheet" href="assets/css/colors/pink.css">
-    <link rel="stylesheet" href="assets/css/colors/purple.css">
-    <link rel="stylesheet" href="assets/css/colors/deep-purple.css">
-    <link rel="stylesheet" href="assets/css/colors/indigo.css">
-    <link rel="stylesheet" href="assets/css/colors/blue.css">
-    <link rel="stylesheet" href="assets/css/colors/yellow.css">
-    <link rel="stylesheet" href="assets/css/colors/green.css">
-    <link rel="stylesheet" href="assets/css/colors/red.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/colors/pink.css">
+    <link rel="stylesheet" href="/assets/css/colors/purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/deep-purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/indigo.css">
+    <link rel="stylesheet" href="/assets/css/colors/blue.css">
+    <link rel="stylesheet" href="/assets/css/colors/yellow.css">
+    <link rel="stylesheet" href="/assets/css/colors/green.css">
+    <link rel="stylesheet" href="/assets/css/colors/red.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
                     <li class=" dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Home</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="index.html">Home Page 1</a>
+                            <a class="sub-menu-item" href="index.html">Home Page 1</a>
                             <a class="sub-menu-item" href="index-2.html">Home Page 2</a>
                         </div>
                     </li>
@@ -250,7 +250,7 @@ Contact Us
                 <div class="single-blog-page col-md-8">
                     <article class="single-post wow fadeInUp animated" data-wow-delay=".2s">
                         <div class="post-image">
-                            <img src="assets/images/blog/post-image.jpg" class="img-responsive" alt="">
+                            <img src="/assets/images/blog/post-image.jpg" class="img-responsive" alt="">
                         </div>
                         <h2>The best, free Stock Photography and Video resources</h2>
                         <p><b>Lorem ipsum</b> dolor sit amet, consectetur adipisicing elit. Harum minima, earum optio quia recusandae ipsam, obcaecati! Sunt ullam nisi, ratione quisquam provident eius quae facilis eos, deserunt consequatur, officiis quos.</p>
@@ -276,7 +276,7 @@ Contact Us
                         <ul>
                             <li class="media">
                                 <div class="media-left">
-                                    <img src="assets/images/blog/comment1.jpg" alt="">
+                                    <img src="/assets/images/blog/comment1.jpg" alt="">
                                 </div>
                                 <div class="media-body">
                                     <a href="#">
@@ -287,7 +287,7 @@ Contact Us
 
                                     <div class="media">
                                         <div class="media-left">
-                                            <img src="assets/images/blog/comment2.jpg" alt="">
+                                            <img src="/assets/images/blog/comment2.jpg" alt="">
                                         </div>
                                         <div class="media-body">
                                             <a href="#">
@@ -301,7 +301,7 @@ Contact Us
                             </li>
                             <li class="media">
                                 <div class="media-left">
-                                    <img src="assets/images/blog/comment3.jpg" alt="">
+                                    <img src="/assets/images/blog/comment3.jpg" alt="">
                                 </div>
                                 <div class="media-body">
                                     <a href="#">
@@ -313,7 +313,7 @@ Contact Us
                             </li>
                             <li class="media">
                                 <div class="media-left">
-                                    <img src="assets/images/blog/comment4.jpg" alt="">
+                                    <img src="/assets/images/blog/comment4.jpg" alt="">
                                 </div>
                                 <div class="media-body">
                                     <a href="#">
@@ -326,13 +326,13 @@ Contact Us
                         </ul>
                     </div>
                     <div class="comment-box mt-70 clearfix wow fadeInUp animated" data-wow-delay=".4s">
-                        <div class="col-md-4 ">
+                        <div class="col-md-4">
                             <div class="form-group label-floating">
                                 <label class="sr-only" for="name">Email</label>
                                 <input type="text" placeholder="Your Name" id="name" required="" class="form-control">
                             </div>
                         </div>
-                        <div class="col-md-4 ">
+                        <div class="col-md-4">
                             <div class="form-group label-floating">
                                 <label class="sr-only" for="useremail">Email</label>
                                 <input type="email" placeholder="Email Address" id="useremail" required="" class="form-control">
@@ -356,7 +356,7 @@ Contact Us
 
                     <aside class="col-md-12 single-sidebar-widget author-widget no-padding wow animated fadeInUp" data-wow-delay=".2s">
                         <div class="author-bg">
-                            <img src="assets/images/blog/author-bg.jpg" alt="">
+                            <img src="/assets/images/blog/author-bg.jpg" alt="">
                         </div>
                         <div class="author-info">
                             <div class="author-name">
@@ -365,7 +365,7 @@ Contact Us
                                     <p>Front End Developer</p>
                                 </div>
                                 <div class="author-image">
-                                    <img src="assets/images/blog/author.jpg" class="img-circle" alt="">
+                                    <img src="/assets/images/blog/author.jpg" class="img-circle" alt="">
                                 </div>
                             </div>
                             <div class="author-bio">
@@ -418,22 +418,22 @@ Contact Us
                         <div class="instagram-feed clearfix">
                             <ul>
                                 <li>
-                                    <a href="#"><img src="assets/images/Instagram/insta.jpg" alt=""></a>
+                                    <a href="#"><img src="/assets/images/Instagram/insta.jpg" alt=""></a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="assets/images/Instagram/insta.jpg" alt=""></a>
+                                    <a href="#"><img src="/assets/images/Instagram/insta.jpg" alt=""></a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="assets/images/Instagram/insta.jpg" alt=""></a>
+                                    <a href="#"><img src="/assets/images/Instagram/insta.jpg" alt=""></a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="assets/images/Instagram/insta.jpg" alt=""></a>
+                                    <a href="#"><img src="/assets/images/Instagram/insta.jpg" alt=""></a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="assets/images/Instagram/insta.jpg" alt=""></a>
+                                    <a href="#"><img src="/assets/images/Instagram/insta.jpg" alt=""></a>
                                 </li>
                                 <li>
-                                    <a href="#"><img src="assets/images/Instagram/insta.jpg" alt=""></a>
+                                    <a href="#"><img src="/assets/images/Instagram/insta.jpg" alt=""></a>
                                 </li>
                             </ul>
                         </div>
@@ -446,13 +446,13 @@ Contact Us
                         <div class="flickr-feed clearfix">
                             <div id="flickr-carousel" class="owl-carousel owl-theme">
                                 <div class="item active">
-                                    <img src="assets/images/Instagram/flickr.jpg" alt="">
+                                    <img src="/assets/images/Instagram/flickr.jpg" alt="">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/images/Instagram/flickr.jpg" alt="">
+                                    <img src="/assets/images/Instagram/flickr.jpg" alt="">
                                 </div>
                                 <div class="item">
-                                    <img src="assets/images/Instagram/flickr.jpg" alt="">
+                                    <img src="/assets/images/Instagram/flickr.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -492,7 +492,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work1.png" alt="">
+                                            <img src="/assets/images/work/footer-work1.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -507,7 +507,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work2.png" alt="">
+                                            <img src="/assets/images/work/footer-work2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -586,7 +586,7 @@ Contact Us
 
     <div id="loader">
         <div class="square-spin">
-            <img src="assets/images/Preloader.gif" alt="MEA Proloader">
+            <img src="/assets/images/Preloader.gif" alt="MEA Proloader">
         </div>
     </div>
 
@@ -627,23 +627,23 @@ Contact Us
 
 
 
-    <script data-cfasync="false" src="assets/js/email-decode.min.js"></script>
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/switcher.js"></script>
-    <script src="assets/js/jquery.mixitup.min.js"></script>
-    <script src="assets/js/jquery.inview.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/scroll-top.js"></script>
-    <script src="assets/js/material.min.js"></script>
-    <script src="assets/js/ripples.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script data-cfasync="false" src="/assets/js/email-decode.min.js"></script>
+    <script src="/assets/js/jquery-min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/switcher.js"></script>
+    <script src="/assets/js/jquery.mixitup.min.js"></script>
+    <script src="/assets/js/jquery.inview.js"></script>
+    <script src="/assets/js/jquery.counterup.min.js"></script>
+    <script src="/assets/js/scroll-top.js"></script>
+    <script src="/assets/js/material.min.js"></script>
+    <script src="/assets/js/ripples.min.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
 
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/form-validator.min.js"></script>
+    <script src="/assets/js/contact-form-script.min.js"></script>
+    <script src="/assets/js/wow.js"></script>
+    <script src="/assets/js/jquery.slicknav.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
