--- a/Template/contact-us.html
+++ b/Template/contact-us.html
@@ -11,29 +11,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/material.min.css">
-    <link rel="stylesheet" href="assets/css/ripples.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/settings.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/material.min.css">
+    <link rel="stylesheet" href="/assets/css/ripples.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/css/settings.css">
+    <link rel="stylesheet" href="/assets/css/slicknav.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
-    <link rel="stylesheet" href="assets/css/switcher.css">
+    <link rel="stylesheet" href="/assets/css/switcher.css">
 
-    <link rel="stylesheet" href="assets/css/colors/pink.css">
-    <link rel="stylesheet" href="assets/css/colors/purple.css">
-    <link rel="stylesheet" href="assets/css/colors/deep-purple.css">
-    <link rel="stylesheet" href="assets/css/colors/indigo.css">
-    <link rel="stylesheet" href="assets/css/colors/blue.css">
-    <link rel="stylesheet" href="assets/css/colors/yellow.css">
-    <link rel="stylesheet" href="assets/css/colors/green.css">
-    <link rel="stylesheet" href="assets/css/colors/red.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/colors/pink.css">
+    <link rel="stylesheet" href="/assets/css/colors/purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/deep-purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/indigo.css">
+    <link rel="stylesheet" href="/assets/css/colors/blue.css">
+    <link rel="stylesheet" href="/assets/css/colors/yellow.css">
+    <link rel="stylesheet" href="/assets/css/colors/green.css">
+    <link rel="stylesheet" href="/assets/css/colors/red.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,14 +48,14 @@
                     <li class=" dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Home</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="index.html">Home Page 1</a>
+                            <a class="sub-menu-item" href="index.html">Home Page 1</a>
                             <a class="sub-menu-item" href="index-2.html">Home Page 2</a>
                         </div>
                     </li>
                     <li class="dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Pages</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="about-us.html">About Us 1</a>
+                            <a class="sub-menu-item" href="about-us.html">About Us 1</a>
                             <a class="sub-menu-item" href="about-us2.html">About Us 2</a>
                             <a class="sub-menu-item" href="team.html">Team Members</a>
                             <a class="sub-menu-item" href="services.html">Services</a>
@@ -388,7 +388,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work1.png" alt="">
+                                            <img src="/assets/images/work/footer-work1.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -403,7 +403,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work2.png" alt="">
+                                            <img src="/assets/images/work/footer-work2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -482,7 +482,7 @@ Contact Us
 
     <div id="loader">
         <div class="square-spin">
-            <img src="assets/images/Preloader.gif" alt="MEA Proloader">
+            <img src="/assets/images/Preloader.gif" alt="MEA Proloader">
         </div>
     </div>
 
@@ -523,25 +523,25 @@ Contact Us
 
 
 
-    <script data-cfasync="false" src="assets/js/email-decode.min.js"></script>
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/switcher.js"></script>
-    <script src="assets/js/jquery.mixitup.min.js"></script>
-    <script src="assets/js/jquery.inview.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/scroll-top.js"></script>
-    <script src="assets/js/material.min.js"></script>
-    <script src="assets/js/ripples.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script data-cfasync="false" src="/assets/js/email-decode.min.js"></script>
+    <script src="/assets/js/jquery-min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/switcher.js"></script>
+    <script src="/assets/js/jquery.mixitup.min.js"></script>
+    <script src="/assets/js/jquery.inview.js"></script>
+    <script src="/assets/js/jquery.counterup.min.js"></script>
+    <script src="/assets/js/scroll-top.js"></script>
+    <script src="/assets/js/material.min.js"></script>
+    <script src="/assets/js/ripples.min.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
 
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
+    <script src="/assets/js/form-validator.min.js"></script>
+    <script src="/assets/js/contact-form-script.min.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3.expsensor=false"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/wow.js"></script>
+    <script src="/assets/js/jquery.slicknav.js"></script>
+    <script src="/assets/js/main.js"></script>
     <script type="text/javascript">
         var map;
         var plain = new google.maps.LatLng(-33.885429, 151.210081);
@@ -550,7 +550,7 @@ Contact Us
 
         var markers = [];
         var image = new google.maps.MarkerImage(
-            'assets/images/map-marker.png',
+            '/assets/images/map-marker.png',
             new google.maps.Size(84, 70),
             new google.maps.Point(0, 0),
             new google.maps.Point(60, 60)
@@ -569,7 +569,7 @@ Contact Us
 
         function initialize() {
             var mapOptions = {
-                backgroundColor: "#ffffff",
+                backgroundColor:"#ffffff",
                 zoom: 15,
                 disableDefaultUI: true,
                 center: mapCoordinates,
@@ -579,69 +579,69 @@ Contact Us
                 disableDoubleClickZoom: true,
                 mapTypeId: google.maps.MapTypeId.ROADMAP,
                 styles: [{
-                        "featureType": "landscape.natural",
-                        "elementType": "geometry.fill",
-                        "stylers": [{
-                            "color": "#ffffff"
+                       "featureType":"landscape.natural",
+                       "elementType":"geometry.fill",
+                       "stylers": [{
+                           "color":"#ffffff"
                         }]
                     }, {
-                        "featureType": "landscape.man_made",
-                        "stylers": [{
-                            "color": "#ffffff"
+                       "featureType":"landscape.man_made",
+                       "stylers": [{
+                           "color":"#ffffff"
                         }, {
-                            "visibility": "off"
+                           "visibility":"off"
                         }]
                     }, {
-                        "featureType": "water",
-                        "stylers": [{
-                            "color": "#80C8E5"
+                       "featureType":"water",
+                       "stylers": [{
+                           "color":"#80C8E5"
                         }, {
-                            "saturation": 0
+                           "saturation": 0
                         }]
                     }, {
-                        "featureType": "road.arterial",
-                        "elementType": "geometry",
-                        "stylers": [{
-                            "color": "#999999"
+                       "featureType":"road.arterial",
+                       "elementType":"geometry",
+                       "stylers": [{
+                           "color":"#999999"
                         }]
                     }, {
-                        "elementType": "labels.text.stroke",
-                        "stylers": [{
-                            "visibility": "off"
+                       "elementType":"labels.text.stroke",
+                       "stylers": [{
+                           "visibility":"off"
                         }]
                     }, {
-                        "elementType": "labels.text",
-                        "stylers": [{
-                            "color": "#333333"
+                       "elementType":"labels.text",
+                       "stylers": [{
+                           "color":"#333333"
                         }]
                     }
 
                     , {
-                        "featureType": "road.local",
-                        "stylers": [{
-                            "color": "#dedede"
+                       "featureType":"road.local",
+                       "stylers": [{
+                           "color":"#dedede"
                         }]
                     }, {
-                        "featureType": "road.local",
-                        "elementType": "labels.text",
-                        "stylers": [{
-                            "color": "#666666"
+                       "featureType":"road.local",
+                       "elementType":"labels.text",
+                       "stylers": [{
+                           "color":"#666666"
                         }]
                     }, {
-                        "featureType": "transit.station.bus",
-                        "stylers": [{
-                            "saturation": -57
+                       "featureType":"transit.station.bus",
+                       "stylers": [{
+                           "saturation": -57
                         }]
                     }, {
-                        "featureType": "road.highway",
-                        "elementType": "labels.icon",
-                        "stylers": [{
-                            "visibility": "off"
+                       "featureType":"road.highway",
+                       "elementType":"labels.icon",
+                       "stylers": [{
+                           "visibility":"off"
                         }]
                     }, {
-                        "featureType": "poi",
-                        "stylers": [{
-                            "visibility": "off"
+                       "featureType":"poi",
+                       "stylers": [{
+                           "visibility":"off"
                         }]
                     }
 
