--- a/Template/services.html
+++ b/Template/services.html
@@ -11,29 +11,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/material.min.css">
-    <link rel="stylesheet" href="assets/css/ripples.min.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="assets/css/settings.css">
-    <link rel="stylesheet" href="assets/css/slicknav.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/material.min.css">
+    <link rel="stylesheet" href="/assets/css/ripples.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.css">
+    <link rel="stylesheet" href="/assets/css/settings.css">
+    <link rel="stylesheet" href="/assets/css/slicknav.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
-    <link rel="stylesheet" href="assets/css/switcher.css">
+    <link rel="stylesheet" href="/assets/css/switcher.css">
 
-    <link rel="stylesheet" href="assets/css/colors/pink.css">
-    <link rel="stylesheet" href="assets/css/colors/purple.css">
-    <link rel="stylesheet" href="assets/css/colors/deep-purple.css">
-    <link rel="stylesheet" href="assets/css/colors/indigo.css">
-    <link rel="stylesheet" href="assets/css/colors/blue.css">
-    <link rel="stylesheet" href="assets/css/colors/yellow.css">
-    <link rel="stylesheet" href="assets/css/colors/green.css">
-    <link rel="stylesheet" href="assets/css/colors/red.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/colors/pink.css">
+    <link rel="stylesheet" href="/assets/css/colors/purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/deep-purple.css">
+    <link rel="stylesheet" href="/assets/css/colors/indigo.css">
+    <link rel="stylesheet" href="/assets/css/colors/blue.css">
+    <link rel="stylesheet" href="/assets/css/colors/yellow.css">
+    <link rel="stylesheet" href="/assets/css/colors/green.css">
+    <link rel="stylesheet" href="/assets/css/colors/red.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,14 +48,14 @@
                     <li class=" dropdown sub-menu">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Home</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="index.html">Home Page 1</a>
+                            <a class="sub-menu-item" href="index.html">Home Page 1</a>
                             <a class="sub-menu-item" href="index-2.html">Home Page 2</a>
                         </div>
                     </li>
                     <li class="dropdown sub-menu active">
                         <a class="dropdown-toggle nav-link" href="#" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Pages</a>
                         <div class="dropdown-menu sub-menu-panel" aria-labelledby="dropdownMenu1">
-                            <a class="sub-menu-item " href="about-us.html">About Us 1</a>
+                            <a class="sub-menu-item" href="about-us.html">About Us 1</a>
                             <a class="sub-menu-item" href="about-us2.html">About Us 2</a>
                             <a class="sub-menu-item" href="team.html">Team Members</a>
                             <a class="sub-menu-item active" href="services.html">Services</a>
@@ -385,44 +385,44 @@ Contact Us
                     <h1 class="section-titile-bg">Our Clients</h1>
                     <h1 class="section-title">Our Clients</h1>
                     <div class="section-image clearfix mt-100">
-                        <img src="assets/images/section-image2.png" class="mt-100 img-responsive" alt="Thumbs Up Icon">
+                        <img src="/assets/images/section-image2.png" class="mt-100 img-responsive" alt="Thumbs Up Icon">
                     </div>
                 </div>
                 <div class="client-container col-md-6 mt-40 clearfix wow animated slideInRight" data-wow-delay=".2s">
 
                     <div class="col-md-4">
                         <div class="single-client-image active">
-                            <img src="assets/images/clients/client1.png" class="img-responsive" alt="">
+                            <img src="/assets/images/clients/client1.png" class="img-responsive" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="single-client-image">
-                            <img src="assets/images/clients/client2.png" class="img-responsive" alt="">
+                            <img src="/assets/images/clients/client2.png" class="img-responsive" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="single-client-image">
-                            <img src="assets/images/clients/client3.png" class="img-responsive" alt="">
+                            <img src="/assets/images/clients/client3.png" class="img-responsive" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="single-client-image">
-                            <img src="assets/images/clients/client4.png" class="img-responsive" alt="">
+                            <img src="/assets/images/clients/client4.png" class="img-responsive" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="single-client-image">
-                            <img src="assets/images/clients/client5.png" class="img-responsive" alt="">
+                            <img src="/assets/images/clients/client5.png" class="img-responsive" alt="">
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="single-client-image">
-                            <img src="assets/images/clients/client6.png" class="img-responsive" alt="">
+                            <img src="/assets/images/clients/client6.png" class="img-responsive" alt="">
                         </div>
                     </div>
                 </div>
@@ -450,7 +450,7 @@ Contact Us
 
                 <div class="col-md-3 wow animated fadeInUp" data-wow-delay=".3s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team1.png" class="img-responsive" alt="">
+                        <img src="/assets/images/team/team1.png" class="img-responsive" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -469,7 +469,7 @@ Contact Us
 
                 <div class="col-md-3 wow animated fadeInUp" data-wow-delay=".4s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team2.png" class="img-responsive" alt="">
+                        <img src="/assets/images/team/team2.png" class="img-responsive" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -488,7 +488,7 @@ Contact Us
 
                 <div class="col-md-3 wow animated fadeInUp" data-wow-delay=".5s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team3.png" class="img-responsive" alt="">
+                        <img src="/assets/images/team/team3.png" class="img-responsive" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -507,7 +507,7 @@ Contact Us
 
                 <div class="col-md-3 wow animated fadeInUp" data-wow-delay=".6s">
                     <div class="single-team-widget">
-                        <img src="assets/images/team/team4.png" class="img-responsive" alt="">
+                        <img src="/assets/images/team/team4.png" class="img-responsive" alt="">
                         <div class="team-member-info">
                             <div class="know-more">
                                 <a class="btn btn-round btn-fab btn-xs" href="javascript:void(0)"><i class="material-icons">&#xE5C8;</i><div class="ripple-container"></div></a>
@@ -572,7 +572,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work1.png" alt="">
+                                            <img src="/assets/images/work/footer-work1.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -587,7 +587,7 @@ Contact Us
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="assets/images/work/footer-work2.png" alt="">
+                                            <img src="/assets/images/work/footer-work2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -666,7 +666,7 @@ Contact Us
 
     <div id="loader">
         <div class="square-spin">
-            <img src="assets/images/Preloader.gif" alt="MEA Proloader">
+            <img src="/assets/images/Preloader.gif" alt="MEA Proloader">
         </div>
     </div>
 
@@ -707,23 +707,23 @@ Contact Us
 
 
 
-    <script data-cfasync="false" src="assets/js/email-decode.min.js"></script>
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/switcher.js"></script>
-    <script src="assets/js/jquery.mixitup.min.js"></script>
-    <script src="assets/js/jquery.inview.js"></script>
-    <script src="assets/js/jquery.counterup.min.js"></script>
-    <script src="assets/js/scroll-top.js"></script>
-    <script src="assets/js/material.min.js"></script>
-    <script src="assets/js/ripples.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script data-cfasync="false" src="/assets/js/email-decode.min.js"></script>
+    <script src="/assets/js/jquery-min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/switcher.js"></script>
+    <script src="/assets/js/jquery.mixitup.min.js"></script>
+    <script src="/assets/js/jquery.inview.js"></script>
+    <script src="/assets/js/jquery.counterup.min.js"></script>
+    <script src="/assets/js/scroll-top.js"></script>
+    <script src="/assets/js/material.min.js"></script>
+    <script src="/assets/js/ripples.min.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
 
-    <script src="assets/js/form-validator.min.js"></script>
-    <script src="assets/js/contact-form-script.min.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/form-validator.min.js"></script>
+    <script src="/assets/js/contact-form-script.min.js"></script>
+    <script src="/assets/js/wow.js"></script>
+    <script src="/assets/js/jquery.slicknav.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
